example header with a little ✨

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,8 @@ a {
 
 header {
   padding: 154px 0 100px;
-  background-color: #448ee4;
+  /* background-color: #448ee4; */
+  background-color: #b5b5b5;
 }
 
 /* media query when the media is wider than 992px */
@@ -35,4 +36,66 @@ section {
 .fit-image {
   object-fit: cover;
   height: calc(25px + 20vw);
+}
+
+.boss-image {
+  background-image: url('../images/earth.jpg'); 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  background-position: center center;
+  background-blend-mode: screen;
+}
+
+header h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+header h2 {
+  font-size: 2rem;
+  color: black;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+
+/* Consider adding drop shadows on header titles */
+header h1, header h2 {
+  text-shadow: 0 0 2px #ffffff, 0 0 4px #b1b6bb;
+}
+
+/* Example fade in of an element */
+.fade-in {
+  animation: fadeIn 5s;
+  -webkit-animation: fadeIn 5s;
+  -moz-animation: fadeIn 5s;
+  -o-animation: fadeIn 5s;
+  -ms-animation: fadeIn 5s;
+}
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
 }
