--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ section {
 }
 
 .boss-image {
-  background-image: url('../images/earth.jpg');
+  background-image: url('../images/mexico.PNG');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -55,7 +55,7 @@ header h1 {
 }
 
 header h2 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   color: black;
   text-align: center;
   margin-bottom: 30px;
