--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ section {
 }
 
 .boss-image {
-  background-image: url('../images/mexico.PNG');
+  background-image: url('../images/south-africa-2.PNG');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
