--- a/css/styles.css
+++ b/css/styles.css
@@ -55,12 +55,18 @@ header h1 {
 }
 
 header h2 {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   color: black;
   text-align: center;
   margin-bottom: 30px;
 }
 
+header h3 {
+  font-size: 0.7rem;
+  color: black;
+  text-align: right;
+  margin-bottom: 05px;
+}
 
 /* Consider adding drop shadows on header titles */
 header h1, header h2 {
