--- a/css/styles.css
+++ b/css/styles.css
@@ -58,13 +58,13 @@ header h2 {
   font-size: 1.5rem;
   color: black;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 header h3 {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   color: black;
-  text-align: right;
+  text-align: center;
   margin-bottom: 1px;
 }
 
