added modal boxes

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,14 +58,14 @@ header h2 {
   font-size: 1.5rem;
   color: black;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 header h3 {
   font-size: 0.7rem;
   color: black;
   text-align: center;
-  margin-bottom: 1px;
+  margin-top: 100px;
 }
 
 /* Consider adding drop shadows on header titles */
